对于日志输出，使用logback 控制日志输出，脚本启动不能使用输出流重定向